--- a/app/projects/projects.module.scss
+++ b/app/projects/projects.module.scss
@@ -1,16 +1,81 @@
-.subSection{
+/* projects.module.scss */
+
+.section {
+    // padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  
+  .header {
+    text-align: center;
+    margin-bottom: 2rem;
+  
+  }
+  
+  .subSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ 
     margin-bottom: 1.5rem;
-}
-
-
-@media (max-width: 768px) {
-    .subSection{
-        display: flex;
-        flex-direction: column;
-        padding: 0 5%;
-        margin: 2rem 0;
+    width: 100%;
+  
+  
+    @media (max-width: 768px) {
+      flex-direction: column;
+      padding: 0 5%;
+      margin: 2rem 0;
     }
-}
+  }
+  
+  .projectIntro {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 85%;
+    margin-top: 2rem;
+    text-align: center;
+  
+    h2 {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      color: red;
+  
+      @media (max-width: 768px) {
+        text-align: center;
+      }
+    }
+  
+    p {
+      text-align: center; 
+    }
+  }
+  
+  .div {
+    width: 85%;
+    align-self: center;
+    text-align: center; // Ensure text is centered within div
+  
+    p {
+      text-align: center; // Ensure text is centered within p tags inside div
+    }
+  }
+  
+  /* Define local class for AOS animations */
+  .aosFadeUp {
+    &[data-aos="fade-up"] {
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+      opacity: 0;
+      transform: translateY(20px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+      &.aos-animate {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  }
+  
