--- a/components/Volunteer/becomeVol.module.scss
+++ b/components/Volunteer/becomeVol.module.scss
@@ -1,6 +1,6 @@
 .section {
 	display: flex;
-	width: 85%;
+	width: 88%;
 	height: 65vh;
 	align-self: center;
 	// background-color: green;
@@ -91,6 +91,10 @@
 	border-radius: 0.8rem;
 	font-weight: bold;
 	transition: all 0.5s ease-in;
+	font-size: 1.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 	@media only screen and (max-width: 600px) {
 		background-color: #ffffff;
