--- a/components/Volunteer/profile-card.module.scss
+++ b/components/Volunteer/profile-card.module.scss
@@ -1,29 +1,26 @@
-// profile-card.module.scss
-
 .volunteersContainer {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
 	justify-content: center;
 	align-self: center;
-	// width: 80%;
-	
+	width: 80%; // Adjust the width to suit your design
 }
 
 .profileCard {
-	border: 1px solid #ccc;
+	// border: 1px solid #a70606;
 	border-radius: 0.5rem;
-	box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0.15rem 0.2rem rgba(0, 0, 0, 0.144);
 	display: flex;
-	flex-direction: column; // Keep column for better alignment within the card
+	flex-direction: column;
 	margin: 1rem;
 	overflow: hidden;
-	width: 85%;
-	max-width: 25rem; // Adjust as needed to reduce the width of each card
+	width: 15rem;
+	max-width: 15rem; // Adjust as needed to reduce the width of each card
 	box-sizing: border-box;
 	background-color: #fff;
 	transition: transform 0.3s ease;
-	height: 32rem; // Adjust the height as needed
+	height: 25rem; // Adjust the height as needed
 
 	&:hover {
 		transform: translateY(-0.5rem);
@@ -40,25 +37,23 @@
 
 .volunteerCard {
 	width: 100%; // Adjust as needed
-	height: 55%; // Adjust as needed
+	height: 70%; // Adjust as needed
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	// padding: 1rem;
-	background-color: red;
+	// background-color: red;
 
 	.imageContainerIcon {
-		// border-radius: 50%;
 		overflow: hidden;
 		width: 100%;
 		height: 100%;
-		object-fit:fill;
+		object-fit: fill;
 	}
 }
 
 .profileInfo {
-	padding: 0.5rem 0 0rem 1rem;
-	text-align: left; // Adjust for better horizontal layout
+	padding: 0.5rem 1rem;
+	text-align: left;
 
 	.name {
 		font-size: 1.2rem;
@@ -69,12 +64,12 @@
 }
 
 .profileContainer {
-	height: 45%;
+	height: 30%;
 }
 
 .profileInfo1 {
-	padding: 0.5rem 0 0.5rem 1rem;
-	text-align: left; 
+	padding: 0.5rem 1rem;
+	text-align: left;
 
 	.rolePosition {
 		font-size: 0.9rem;
@@ -84,24 +79,29 @@
 }
 
 .profileDescription {
-	padding: 0.5rem 0 0.5rem 1rem;
-	text-align: left; 
+	padding: 0.5rem 1rem;
+	text-align: left;
+	// background-color: aquamarine;
+	// width: 90%;
+	height: 30%;
+	// margin-bottom: 1rem;
 
 	.descriptionText {
 		font-size: 0.75rem;
 		color: #333;
 		margin: 0;
+		width: 100%;
+		text-wrap: wrap;
 	}
 }
 
 .contactIcons {
 	padding-left: 1rem;
 	text-align: center;
-	// background-color: #f9f9f9;
+	margin-bottom: 1rem;
 
 	.socialMediaIcons {
 		display: flex;
-		//   justify-content: center;
 		gap: 1rem;
 
 		.icon {
