--- a/components/Volunteer/volunteers.module.scss
+++ b/components/Volunteer/volunteers.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-wrap: nowrap; /* Prevent wrapping */
 	// overflow-x: auto; /* Enable horizontal scrolling */
-	margin-bottom: 3rem;
+	// margin-bottom: 1rem;
 	gap: 1rem;
 	// padding: 1rem;
 	width: 88%;
