--- a/app/volunteer/volunteer.module.scss
+++ b/app/volunteer/volunteer.module.scss
@@ -5,7 +5,7 @@
 }
 
 .h1 {
-	color: red;
+	color:  #b91c1c;
 	font-size: 2rem;
 	margin-left: 7%;
 }
@@ -17,8 +17,8 @@
 }
 
 .link {
-	// font-weight: bold;
-	color: rgb(236, 46, 46);
+
+	color:  #b91c1c
 }
 
 .volContainer {
@@ -35,12 +35,12 @@
 	display: flex;
 	align-items: center;
 	width: 100%;
-	// background-color: purple;
+
 	flex-direction: column;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1026px) {
-	/* CSS rules for large devices */
+
 	.h1 {
 		font-size: 1.2em;
 	}
@@ -59,7 +59,7 @@
 }
 
 @media (max-width: 767px) {
-	/* CSS rules for smaller devices */
+
 	.h1 {
 		font-size: 1.5em;
 	}
@@ -75,7 +75,6 @@
 
 	.volContainer {
 		flex-direction: column;
-		//   align-items: center;
-		background-color: aqua;
+	
 	}
 }
