--- a/components/Projects/projectStyles.module.scss
+++ b/components/Projects/projectStyles.module.scss
@@ -15,7 +15,7 @@
 	}
 
 	@media (min-width: 768px) and (max-width: 1024px) {
-		flex-direction: column; /* Stack items vertically */
+		flex-direction: column; 
 		height: auto;
 		width: 100%;
 	}
@@ -49,7 +49,7 @@
 }
 
 .link {
-	color: rgb(226, 28, 28);
+	color:  #b91c1c;
 	font-weight: bold;
 }
 .image {
@@ -77,7 +77,7 @@
 
 	h2 {
 		font-size: 2rem;
-		color: red;
+		color:  #b91c1c;
 		margin-bottom: 1.2rem;
 		font-weight: bold;
 
